<resources>
    <string name="app_name">АТУ app</string>
    <string name="logo_icon">Logo</string>
    <string name="contact_text">Контакты</string>
    <string name="home_text">Главная</string>
    <string name="service_text">Услуги</string>
    <string name="profile_text">Профиль</string>
    <string name="info_text">Информация</string>
    <string name="document_text">Документы</string>
    <string name="notification_text">Уведомления</string>
    <string name="textview">TextView</string>
</resources>