<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBgColor"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/asideBgColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:contentDescription="@string/logo_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_logo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/home_text"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/asideBgColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:contentDescription="@string/home_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_home" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:contentDescription="@string/service_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView8"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_service" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="3dp"
            android:contentDescription="@string/profile_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView6"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_profile" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:contentDescription="@string/notification_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView5"
            app:layout_constraintStart_toEndOf="@+id/imageView7"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_alert" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:contentDescription="@string/info_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView6"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_info" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:contentDescription="@string/document_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView7"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_document2" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>